ProductServiceTest finished